src/metrics/snapshots/big_code_analysis__metrics__npa__tests__cpp_methods_not_counted_as_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 0.0,
  "interfaces": 0.0,
  "class_attributes": 1.0,
  "interface_attributes": 0.0,
  "class_cda": 0.0,
  "interface_cda": 0.0,
  "total": 0.0,
  "total_attributes": 1.0,
  "cda": 0.0
}
