src/metrics/snapshots/big_code_analysis__metrics__npa__tests__cpp_mixed_visibility_sections.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 1.0,
  "interfaces": 0.0,
  "class_attributes": 3.0,
  "interface_attributes": 0.0,
  "class_cda": 0.3333333333333333,
  "interface_cda": 0.0,
  "total": 1.0,
  "total_attributes": 3.0,
  "cda": 0.3333333333333333
}
