src/metrics/snapshots/big_code_analysis__metrics__npa__tests__csharp_attribute_modifiers.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "class_npa_sum": 4,
  "interface_npa_sum": 0,
  "class_attributes": 7,
  "interface_attributes": 0,
  "class_cda": 0.5714285714285714,
  "interface_cda": 0.0,
  "total": 4,
  "total_attributes": 7,
  "cda": 0.5714285714285714
}
