src/metrics/snapshots/big_code_analysis__metrics__npa__tests__csharp_classes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 3.0,
  "interfaces": 0.0,
  "class_attributes": 5.0,
  "interface_attributes": 0.0,
  "class_cda": 0.6,
  "interface_cda": 0.0,
  "total": 3.0,
  "total_attributes": 5.0,
  "cda": 0.6
}
