src/metrics/snapshots/big_code_analysis__metrics__npa__tests__csharp_interface.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "class_npa_sum": 0,
  "interface_npa_sum": 2,
  "class_attributes": 0,
  "interface_attributes": 2,
  "class_cda": 0.0,
  "interface_cda": 1.0,
  "total": 2,
  "total_attributes": 2,
  "cda": 1.0
}
