src/metrics/snapshots/big_code_analysis__metrics__npa__tests__csharp_multiple_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "class_npa_sum": 12,
  "interface_npa_sum": 0,
  "class_attributes": 18,
  "interface_attributes": 0,
  "class_cda": 0.6666666666666666,
  "interface_cda": 0.0,
  "total": 12,
  "total_attributes": 18,
  "cda": 0.6666666666666666
}
