src/metrics/snapshots/big_code_analysis__metrics__npa__tests__csharp_object_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 4,
  "interfaces": 0,
  "class_attributes": 5,
  "interface_attributes": 0,
  "class_cda": 0.8,
  "interface_cda": 0.0,
  "total": 4,
  "total_attributes": 5,
  "cda": 0.8
}
