src/metrics/snapshots/big_code_analysis__metrics__npa__tests__csharp_single_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 8.0,
  "interfaces": 0.0,
  "class_attributes": 16.0,
  "interface_attributes": 0.0,
  "class_cda": 0.5,
  "interface_cda": 0.0,
  "total": 8.0,
  "total_attributes": 16.0,
  "cda": 0.5
}
