src/metrics/snapshots/big_code_analysis__metrics__npa__tests__go_embedded_type_counts_as_attribute.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "class_npa_sum": 2,
  "interface_npa_sum": 0,
  "class_attributes": 3,
  "interface_attributes": 0,
  "class_cda": 0.6666666666666666,
  "interface_cda": 0.0,
  "total": 2,
  "total_attributes": 3,
  "cda": 0.6666666666666666
}
