src/metrics/snapshots/big_code_analysis__metrics__npa__tests__go_grouped_struct_fields_each_count.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "class_npa_sum": 3,
  "interface_npa_sum": 0,
  "class_attributes": 3,
  "interface_attributes": 0,
  "class_cda": 1.0,
  "interface_cda": 0.0,
  "total": 3,
  "total_attributes": 3,
  "cda": 1.0
}
